--- a/tutorial/MvcMovie/Views/Movies/Index.cshtml
+++ b/tutorial/MvcMovie/Views/Movies/Index.cshtml
@@ -33,6 +33,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Movies[0].Rating)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Movies[0].ISBN)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -53,6 +56,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Rating)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ISBN)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
